# pgais

./: .gitignore  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING  LICENSE  README  README.md
.github/workflows/: ci.yml
include/aislib/: aislib.h  bitfield.h  error.h  message.h  payload.h  registry_init.h  sentence.h
include/aislib/messages/: msg05.h  msg09.h  msg10.h  msg18.h  msg19.h  msg1_3.h  msg24.h  msg27.h  msg4_11.h  msg5.h
src/: registry_init.cpp
src/core/: bitfield.cpp  error.cpp  message.cpp  payload.cpp  sentence.cpp
src/messages/: msg05.cpp  msg09.cpp  msg10.cpp  msg18.cpp  msg19.cpp  msg1_3.cpp  msg24.cpp  msg27.cpp  msg4_11.cpp  msg5.cpp
tests/core/: CMakeLists.txt  test_assembler.cpp  test_bitfield.cpp  test_error.cpp  test_message.cpp  test_payload.cpp  test_sentence.cpp
tests/messages/: CMakeLists.txt  test_msg05.cpp  test_msg09.cpp  test_msg10.cpp  test_msg18.cpp  test_msg19.cpp  test_msg1_3.cpp  test_msg24.cpp  test_msg27.cpp  test_msg4_11.cpp  test_msg5.cpp
